--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <link ref="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>Welcome.</h1>
