--- a/c6267e113cac/index.html
+++ b/c6267e113cac/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <div id="who">
-      UNSWX explains ...
+      UNSW explains ...
     </div>
     <header>
       What is data?    </header>
